# agent-pipeline

./: .gitignore  agent-pipeline.bat  agent-pipeline.ps1  pyproject.toml  run_pipeline.py
prompts/: architect.txt  coder.txt  security.txt  supervisor.txt  tester.txt
